// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDropdown activator should render an icon on desktop if email doesnt exist 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  <Person
    size={24}
  />
</UnstyledLink>
`;

exports[`AccountDropdown activator should render an icon on mobile 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  <Person
    size={24}
  />
</UnstyledLink>
`;

exports[`AccountDropdown activator should render email address on desktop 1`] = `
<UnstyledLink
  className="Email"
  onClick={[Function]}
>
  <React.Fragment>
    test@testing.com
     
    <ArrowDropDown />
  </React.Fragment>
</UnstyledLink>
`;

exports[`AccountDropdown should render correctly 1`] = `
<Popover
  bottom={true}
  left={true}
  onClose={[Function]}
  open={false}
  right={true}
  trigger={
    <Context.Consumer>
      [Function]
    </Context.Consumer>
  }
>
  <ActionList
    actions={
      Array [
        Object {
          "component": [Function],
          "content": "link",
          "external": undefined,
          "to": "link",
        },
        Object {
          "content": <React.Fragment>
            link2
             
            <div
              className="FloatIcon"
            >
              <MockIcon
                size={15}
              />
            </div>
          </React.Fragment>,
          "external": true,
          "to": "link2",
        },
        Object {
          "component": [Function],
          "content": "link3",
          "external": undefined,
          "onClick": [Function],
        },
      ]
    }
    className="AccountList"
    groupByKey="section"
    onClick={[Function]}
  />
</Popover>
`;
